objects/Social_Action__c.object
<CustomObject><fields>
        <fullName>Account_Address__c</fullName>
        <formula>Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Account_City__c</fullName>
        <formula>Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account City</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Account_State__c</fullName>
        <formula>TEXT (Account__r.BillingStateCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Account_Zip__c</fullName>
        <formula>Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Zip</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Organization that is benefiting from the Social Action. E.g. organization that receives money from a-thon match</description>
        <inlineHelpText>Organization that is benefiting from the Social Action. E.g. organization that receives money from a-thon match</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Social Actions</relationshipLabel>
        <relationshipName>Social_Actions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Amount_Requested__c</fullName>
        <description>Monetary amount requested from external organization (e.g. amount requested on an application). Leave blank organization did not request a specific amount. This field does NOT apply to internal/staff matching requests.</description>
        <inlineHelpText>Monetary amount requested from external organization (e.g. amount requested on an application). Leave blank organization did not request a specific amount. This field does NOT apply to internal/staff matching requests.</inlineHelpText>
        <label>Amount Requested</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Amount_Requested_vs_Mathworks_awarded__c</fullName>
        <description>Difference between amount requested by organization and amount awarded by MathWorks</description>
        <formula>Mathworks_Monetary_Contribution__c - Amount_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference between amount requested by organization and amount awarded by MathWorks</inlineHelpText>
        <label>Amount Requested vs. MathWorks Awarded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Category__c</fullName>
        <description>Category the Action primarily falls into. Selection is based on "Type".  Award categories = a-thon, grants, sponsorships. Initiatives categories = staff collection drives, volunteer, STEM.</description>
        <inlineHelpText>Category the Action primarily falls into. Selection is based on "Type".  Award categories = a-thon, grants, sponsorships. Initiatives categories = staff collection drives, volunteer, STEM.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A-Thon</fullName>
                </value>
                <value>
                    <fullName>Breakfast Tables</fullName>
                </value>
                <value>
                    <fullName>Charitable Drives</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Community Event</fullName>
                </value>
                <value>
                    <fullName>Community Funding</fullName>
                </value>
                <value>
                    <fullName>Community Grants</fullName>
                </value>
                <value>
                    <fullName>Company/Social Mission</fullName>
                </value>
                <value>
                    <fullName>Corporate Communications</fullName>
                </value>
                <value>
                    <fullName>Corporate Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Curriculum Development</fullName>
                </value>
                <value>
                    <fullName>Education Marketing</fullName>
                </value>
                <value>
                    <fullName>End of Year Donations</fullName>
                </value>
                <value>
                    <fullName>Global Relief</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Other Funding</fullName>
                </value>
                <value>
                    <fullName>Raffle</fullName>
                </value>
                <value>
                    <fullName>Scholarships</fullName>
                </value>
                <value>
                    <fullName>STEM</fullName>
                </value>
                <value>
                    <fullName>Student Competitions</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact_Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary contact you work with for this specific Social Action. Contact can be internal or external.</description>
        <inlineHelpText>Primary contact you work with for this specific Social Action. Contact can be internal or external.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Social Actions</relationshipLabel>
        <relationshipName>Social_Actions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Contact_is_MW_Staff__c</fullName>
        <description>Check mark = contact is internal staff member (automatically populated)</description>
        <formula>Contact__r.Employee_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Check mark = contact is internal staff member (automatically populated)</inlineHelpText>
        <label>Contact is MW Staff</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Count_of_Volunteers__c</fullName>
        <description>Count of MathWorks volunteers participating in this Social Action. To track volunteers, enter contact(s) in the "Social Engagements" section.</description>
        <inlineHelpText>Count of MathWorks volunteers participating in this Social Action. To track volunteers, enter contact(s) in the "Social Engagements" section.</inlineHelpText>
        <label>Count of Volunteers</label>
        <summaryForeignKey>Social_Engagement__c.Social_Action__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Currency__c</fullName>
        <description>capture the currency that is awarded for a Social Action</description>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                    <label>USD</label>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Date_of_Request__c</fullName>
        <description>Date that the initial request was received.</description>
        <label>Date of Request</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <description>Details of the award, program, or event. If Social Action is created by inbound email, contents of the email will be displayed here as a default. OK to delete/update as appropriate.</description>
        <inlineHelpText>Details of the award, program, or event. If Social Action is created by inbound email, contents of the email will be displayed here as a default. OK to delete/update as appropriate.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>E2AEmailCount__c</fullName>
        <description>Count of New/Unread emails associated to the Social Action</description>
        <inlineHelpText>Count of New/Unread emails associated to the Social Action</inlineHelpText>
        <label>E2AEmailCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>End_Date__c</fullName>
        <description>Depends on the situation and when the action should be recognized. E.g.:   Community Grants = date grant is approved;  Corporate Sponsorship = date sponsorship term/agreement ends  A-thons=date A-thon request is approved; Volunteer activity=date of event</description>
        <inlineHelpText>Depends on the situation and when the action should be recognized. E.g.:   Community Grants = date grant is approved;  Corporate Sponsorship = date sponsorship term/agreement ends  A-thons=date A-thon request is approved; Volunteer activity=date of event</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>End_Term__c</fullName>
        <description>Converts the End Date to quarter and year recognized</description>
        <formula>CASE(YEAR(End_Date__c ), 
2007, "2007" , 
2008, "2008", 
2009, "2009", 
2010, "2010", 
2011, "2011", 
2012, "2012", 
2013, "2013", 
2014, "2014", 
2015, "2015", 
2016, "2016", 
2017, "2017", 
2018, "2018", 
2019, "2019", 
2020, "2020", 
"")

&amp; "-" 

&amp;CASE(MONTH( End_Date__c), 
1, "Q1" , 
2, "Q1", 
3, "Q1", 
4, "Q2", 
5, "Q2", 
6, "Q2", 
7, "Q3", 
8, "Q3", 
9, "Q3", 
10, "Q4", 
11, "Q4", 
12, "Q4", 
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Converts the End Date to quarter and year recognized</inlineHelpText>
        <label>End Term</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Event_Hours__c</fullName>
        <description>track the number of hours the Event is</description>
        <inlineHelpText>track the number of hours the Event is</inlineHelpText>
        <label>Event Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Event_Program_Name__c</fullName>
        <description>Working title/name given to the Action. E.g. Museum of Science 2016-2017 Partnership, Marketing Volunteer Event at Natick Farm 5/1/2017</description>
        <inlineHelpText>Working title/name given to the Action. E.g. Museum of Science 2016-2017 Partnership, Marketing Volunteer Event at Natick Farm 5/1/2017</inlineHelpText>
        <label>Event/Program Name</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>MIgration_ID__c</fullName>
        <description>Used to facilitate initial data migration of Social Actions and related records.  This is used to store a foreign key and should not be displayed on a page layout.  This may be deleted in the future after checking with CRM team on requirement to keep the field once the initial load is completed.</description>
        <externalId>true</externalId>
        <label>MIgration ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>MathWorks_Office__c</fullName>
        <description>Office the Social Action applies to</description>
        <inlineHelpText>Office the Social Action applies to</inlineHelpText>
        <label>MathWorks Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>BNL</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>Natick</fullName>
                    <default>true</default>
                    <label>Natick</label>
                </value>
                <value>
                    <fullName>Nordic</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>US - All</fullName>
                </value>
                <value>
                    <fullName>US - LA</fullName>
                </value>
                <value>
                    <fullName>US - Natick</fullName>
                </value>
                <value>
                    <fullName>US - Novi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Mathworks_Monetary_Contribution__c</fullName>
        <description>Sum of MathWorks Contributions entered on the "Social Benefits &amp; Contribution" section. This amount is what is reflected in the Social Mission budget expense reports.</description>
        <inlineHelpText>Sum of MathWorks Contributions entered on the "Social Benefits &amp; Contribution" section. This amount is what is reflected in the Social Mission budget expense reports.</inlineHelpText>
        <label>Mathworks Monetary Contribution</label>
        <summarizedField>Social_Benefits_and_Contributions__c.Contribution_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Social_Benefits_and_Contributions__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contributions</value>
        </summaryFilterItems>
        <summaryForeignKey>Social_Benefits_and_Contributions__c.Social_Action__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Monetary_Request_Award_Delta__c</fullName>
        <description>used to calculate the difference between amount requested and amount awarded.  Useful in reporting.  Does not need to be displayed on the page layout.</description>
        <formula>Mathworks_Monetary_Contribution__c - Amount_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>used to calculate the difference between amount requested and amount awarded.</inlineHelpText>
        <label>Monetary Request / Award Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Parent_Social_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link this Social Action to a Master/Parent Social Action #.  E.g. Individual volunteer events can be linked to the Parent Social Action "2017 Volunteer Challenge Parent Action</description>
        <inlineHelpText>Link this Social Action to a Master/Parent Social Action #.  E.g. Individual volunteer events can be linked to the Parent Social Action "2017 Volunteer Challenge Parent Action"</inlineHelpText>
        <label>Parent Social Action</label>
        <referenceTo>Social_Action__c</referenceTo>
        <relationshipLabel>Social Actions</relationshipLabel>
        <relationshipName>Social_Actions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Pillar__c</fullName>
        <label>Pillar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Global Relief</fullName>
                </value>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Spam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Project_Hours__c</fullName>
        <description>Optional: Track the hours of the core Social Mission team/owner spent on this project. This is to measure resource hours, not donated time (which should be tracked in the "Social Engagements" section).</description>
        <inlineHelpText>Optional: Track the hours of the core Social Mission team/owner spent on this project. This is to measure resource hours, not donated time (which should be tracked in the "Social Engagements" section).</inlineHelpText>
        <label>Project Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>SIebel_Agreement__c</fullName>
        <description>Track the Siebel Agreement that the record was created from</description>
        <label>SIebel Agreement #</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Score__c</fullName>
        <description>Applies to Community Grant Applications only. Score given to an applicant from the Grant team. Record score as a fraction of the total points. E.g.26/35</description>
        <inlineHelpText>Applies to Community Grant Applications only. Score given to an applicant from the Grant team. Record score as a fraction of the total points. E.g.26/35</inlineHelpText>
        <label>Score</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Siebel_Account__c</fullName>
        <description>track the Account from the Siebel record</description>
        <label>Siebel Account</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Siebel_Contact__c</fullName>
        <description>track the Contact from the Siebel record</description>
        <label>Siebel Contact</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Siebel_SR__c</fullName>
        <description>track the Siebel SR Number for which this record was created for</description>
        <label>Siebel SR #</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Staff_Monetary_Contribution__c</fullName>
        <description>Amount collected/donated by staff members only. Leave blank if no money was raised by staff members. Monetary contribution from MathWorks should be entered on the "Social Benefits &amp; Contribution" section of the "Action Details" view.</description>
        <inlineHelpText>Amount collected/donated by staff members only. Leave blank if no money was raised by staff members. Monetary contribution from MathWorks should be entered on the "Social Benefits &amp; Contribution" section of the "Action Details" view.</inlineHelpText>
        <label>Staff Monetary Contribution</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Staff_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What Staff member requested the Award or Initiaitve</description>
        <inlineHelpText>What Staff member requested the Award or Initiaitve</inlineHelpText>
        <label>Staff Requestor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>look up of MathWorks staff</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Social Actions (staff Requestor)</relationshipLabel>
        <relationshipName>Social_Actions1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Start_Date__c</fullName>
        <description>Depends on the situation and when the action should be recognized. E.g.:   Community Grants = date application received;  Corporate Sponsorship = date sponsorship term/agreement begins;  A-thons = date staff member submits matching request; Volunteer activity = date of event.</description>
        <inlineHelpText>Depends on the situation and when the action should be recognized. E.g.:   Community Grants = date application received;  Corporate Sponsorship = date sponsorship term/agreement begins;  A-thons = date staff member submits matching request; Volunteer acti</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Start_Term__c</fullName>
        <description>Converts the Start Date to quarter and year recognized</description>
        <formula>CASE(YEAR(Start_Date__c ), 
2007, "2007" , 
2008, "2008", 
2009, "2009", 
2010, "2010", 
2011, "2011", 
2012, "2012", 
2013, "2013", 
2014, "2014", 
2015, "2015", 
2016, "2016", 
2017, "2017", 
2018, "2018", 
2019, "2019", 
2020, "2020", 
"")

&amp; "-" 

&amp;CASE(MONTH( Start_Date__c), 
1, "Q1" , 
2, "Q1", 
3, "Q1", 
4, "Q2", 
5, "Q2", 
6, "Q2", 
7, "Q3", 
8, "Q3", 
9, "Q3", 
10, "Q4", 
11, "Q4", 
12, "Q4", 
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Converts the Start Date to quarter and year recognized</inlineHelpText>
        <label>Start Term</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <description>Status of Action. Selection is dependent on "Category".</description>
        <inlineHelpText>Status of Action. Selection is dependent on "Category".</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Fundraiser Open</fullName>
                </value>
                <value>
                    <fullName>Processing Match</fullName>
                </value>
                <value>
                    <fullName>Waiting for Legal Team</fullName>
                </value>
                <value>
                    <fullName>Waiting For Organization</fullName>
                </value>
                <value>
                    <fullName>Waiting for Internal</fullName>
                </value>
                <value>
                    <fullName>Waiting for Steering Team</fullName>
                </value>
                <value>
                    <fullName>Ready for Review</fullName>
                </value>
                <value>
                    <fullName>Process Payment</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Spam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>SubCategory__c</fullName>
        <description>Subcategory of Action. Selection is dependent on "Category".</description>
        <inlineHelpText>Subcategory of Action. Selection is dependent on "Category".</inlineHelpText>
        <label>SubCategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Corporate Donation</fullName>
                </value>
                <value>
                    <fullName>Disaster Relief</fullName>
                </value>
                <value>
                    <fullName>Disaster Relief (staff matching)</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Environment/Animals</fullName>
                </value>
                <value>
                    <fullName>Health Related</fullName>
                </value>
                <value>
                    <fullName>Human and Social Services</fullName>
                </value>
                <value>
                    <fullName>Museum</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Program Announcement</fullName>
                </value>
                <value>
                    <fullName>STEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Supporting_Files_URL__c</fullName>
        <description>Internal URL of files associated to the Social Action</description>
        <inlineHelpText>Internal URL of files associated to the Social Action</inlineHelpText>
        <label>Supporting Files URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Thread_ID__c</fullName>
        <formula>"ref:"&amp;LEFT( $Organization.Id , 4 )&amp;
IF(BEGINS(RIGHT($Organization.Id,11), '0000000'),
RIGHT($Organization.Id,4),
IF(BEGINS(RIGHT($Organization.Id,11), '000000'),
RIGHT($Organization.Id,5),
IF(BEGINS(RIGHT($Organization.Id,11), '00000'),
RIGHT($Organization.Id,6),
IF(BEGINS(RIGHT($Organization.Id,11), '0000'),
RIGHT($Organization.Id,7),
IF(BEGINS(RIGHT($Organization.Id,11), '000'),
RIGHT($Organization.Id,8),
IF(BEGINS(RIGHT($Organization.Id,11), '00'),
RIGHT($Organization.Id,9),
IF(BEGINS(RIGHT($Organization.Id,11), '0'),
RIGHT($Organization.Id,10),
RIGHT($Organization.Id,11)
)
)
)
)
)
)
)
&amp;"."&amp;LEFT( Id , 4 )&amp;
IF(BEGINS(RIGHT(Id,11), '0000000'), RIGHT(Id,4),
IF(BEGINS(RIGHT(Id,11), '000000'), RIGHT(Id,5),
IF(BEGINS(RIGHT(Id,11), '00000'), RIGHT(Id,6),
IF(BEGINS(RIGHT(Id,11), '0000'), RIGHT(Id,7),
IF(BEGINS(RIGHT(Id,11), '000'), RIGHT(Id,8),
IF(BEGINS(RIGHT(Id,11), '00'), RIGHT(Id,9),
IF(BEGINS(RIGHT(Id,11), '0'), RIGHT(Id,10),
RIGHT(Id,11)
)
)
)
)
)
)
)
&amp;":ref"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Total_Hours_Invested__c</fullName>
        <description>Sum of hours from Social Engagements. This is the donated time by staff members.  Resource hours spent by the core Social Mission Team should be tracked in the "Project Hours" field.</description>
        <inlineHelpText>Sum of hours from Social Engagements. This is the donated time by staff members.  Resource hours spent by the core Social Mission Team should be tracked in the "Project Hours" field.</inlineHelpText>
        <label>Total Volunteer Hours</label>
        <summarizedField>Social_Engagement__c.Hours_Invested__c</summarizedField>
        <summaryForeignKey>Social_Engagement__c.Social_Action__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Total_Monetary_Contribution__c</fullName>
        <description>Sum of MathWorks + Staff monetary contributions</description>
        <formula>Staff_Monetary_Contribution__c +  Mathworks_Monetary_Contribution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of MathWorks + Staff monetary contributions</inlineHelpText>
        <label>Total Monetary Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <description>"Awards" = monetary contribution by MathWorks (e.g. grants, sponsorship, a-thon matching). "Initiatives" = activities that do NOT involve a financial contribution from MathWorks (e.g. staff collection drives, STEM activities). "Events" = primary Action is centered on an event (e.g. Science Fair Expo, STEM Ambassador visits a school)</description>
        <inlineHelpText>"Awards" = monetary contribution by MathWorks. "Initiatives" = activities that do NOT involve a financial contribution from MathWorks. "Events" = primary Action is centered on an event.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awards</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
                <value>
                    <fullName>Initiatives</fullName>
                </value>
                <value>
                    <fullName>Not Social Mission</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>US_Tax_Documentation_Recieved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to acknowledge that proper tax documentation was received and the award can be released. This applies only to US organizations.</description>
        <inlineHelpText>Check to acknowledge that proper tax documentation was received and the award can be released. This applies only to US organizations.</inlineHelpText>
        <label>U.S. Tax Documentation Recieved</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>US_Tax_Documents__c</fullName>
        <description>Link to SharePoint folder containing US tax documents</description>
        <formula>HYPERLINK("http://sharepoint.mathworks.com/marketing/marcomm/teams/corpcomm/socialmission/Tax%20Documents/Forms/AllItems.aspx", "Tax Documents In Sharepoint")</formula>
        <inlineHelpText>Link to SharePoint folder containing US tax documents</inlineHelpText>
        <label>US Tax Documents</label>
        <type>Text</type>
    </fields>    </validationRules></CustomObject>